# uuid_short

./: CMakeLists.txt  README.md  uuid_short.vix  vix.json
examples/: basic.cpp  custom_alphabet.cpp  custom_length.cpp  options.cpp  prefix.cpp
include/uuid_short/: uuid_short.hpp
tests/: test_basic.cpp
